# insult-ai

./: noxfile.py  pyproject.toml
docs/: conf.py  conf.rst  index.rst  reference.rst
insult_ai/: __init__.py  console.py
tests/: test_insult_ai.py
