[tool.poetry]
name = "insult-ai"
version = "0.1.0"
description = ""
authors = ["Richard Brooker <richard@anghami.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
pandas = "^1.2.5"
detoxify = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
insult-ai = "insult_ai.console:insult_me"
